# modern-phone-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: default.json
examples/: basic_usage.py  cli_examples.sh  web_api.py
phone_checker/: __init__.py  __main__.py  cache.py  confidence.py  config.py  core.py  logging.py  models.py  utils.py
src/components/: phone-input.tsx
tests/: __init__.py  test_cache.py  test_integration.py  test_models.py  test_utils.py
